fixed placeholder not visible

--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -74,20 +74,20 @@ i.settings {
     }
 }
 
+nav#searchbox {
+    ::-webkit-input-placeholder {
+        color: #fff !important
+    }
 
-::-webkit-input-placeholder {
-    color: #fff !important
+    :-moz-placeholder { /* Firefox 18- */
+        color: #fff !important;
+    }
+
+    ::-moz-placeholder {  /* Firefox 19+ */
+        color: #fff !important;   
+    }
+
+    :-ms-input-placeholder {  
+        color: #fff !important; 
+    }
 }
-
-:-moz-placeholder { /* Firefox 18- */
-    color: #fff !important;
-}
-
-::-moz-placeholder {  /* Firefox 19+ */
-    color: #fff !important;   
-}
-
-:-ms-input-placeholder {  
-    color: #fff !important; 
-}
-
